--- a/client/index.html
+++ b/client/index.html
@@ -13,11 +13,16 @@
     <script src="collections/Songs.js"></script>
     <script src="collections/SongQueue.js"></script>
     <script src="models/AppModel.js"></script>
+    <script src="env/config.js"></script>
 
     <script src="views/PlayerView.js"></script>
     <script src="views/LibraryView.js"></script>
     <script src="views/LibraryEntryView.js"></script>
+    
     <script src="views/AppView.js"></script>
+    <script src="views/SongQueueView.js"></script>
+    <script src="views/SongQueueEntryView.js"></script>
+
 
     <script>
       $(function() {
@@ -27,10 +32,10 @@
 
         // build a view for the top level of the whole app
         var appView = new AppView({model: app});
-
+        
         // put the view onto the screen
         $('body').append(appView.render());
-      });
+      })
     </script>
   </body>
 </html>
